--- a/docker/response.ini
+++ b/docker/response.ini
@@ -11,10 +11,10 @@ NumberofConfigurations=1
 ApplyAsServicePack=0
 
 [Product Configuration 1]
-name=<YOUR COMPANY NAME>
-serial=<PASOE SERIAL>
+name=DocuTAP
+serial=006160489
 version=11.7
-control=<PASOE CONTROL>
+control=?PFR9 XPPTD J4R?8
 prodname=Progress ProdAS for OE
 
 ;
