new silent install file: REMOVE THIS LATER

--- a/docker/response.ini
+++ b/docker/response.ini
@@ -5,13 +5,20 @@
 ;
 
 [Configuration Count]
-NumberofConfigurations=1
+NumberofConfigurations=2
 
 [Install Method]
 ApplyAsServicePack=0
 
 [Product Configuration 1]
-name=DocuTAP
+name=DocUTap
+serial=006128301
+version=11.7
+control=ZPBS9 TQRTN 3MMY4
+prodname=OE Enterprise RDBMS
+
+[Product Configuration 2]
+name=DocUTap
 serial=006160489
 version=11.7
 control=?PFR9 XPPTD J4R?8
@@ -24,6 +31,17 @@ prodname=Progress ProdAS for OE
 ;
 
 ;
+; DESCRIPTION of OpenEdge Explorer
+;
+; enable  - indicates whether or not you want to enable the OpenEdge Explorer functionality.
+;   - a value of false indicates you do NOT want to enable the OpenEdge Explorer functionality.
+;   - a value of true indicates you want to enable the OpenEdge Explorer functionality.
+;
+
+[OpenEdge Explorer]
+enable=false
+
+;
 ; DESCRIPTION of Type and Destination
 ;
 ;  path - identifies the directory in which you install your OpenEdge product software.
@@ -34,10 +52,67 @@ prodname=Progress ProdAS for OE
 
 [Type and Destination]
 type=COMPLETE
-path=${DLC}
-workpath=${WRKDIR}
-oem_path=${OEM}
-oem_workpath=${OEMWRKDIR}
+path=/usr/dlc
+workpath=/usr/wrk
+oem_path=/usr/oemgmt
+oem_workpath=/usr/wrk_oemgmt
+
+;
+; DESCRIPTION of Server Engine
+;
+; UseSqlServerEngine - valid values are 0 and 1.
+;   0 - indicates that the SQL Database Engine is to not be installed.
+;   1 - indicates that the SQL Database Engine is to be installed.
+;
+
+[Server Engine]
+UseSqlServerEngine=1
+
+;
+; DESCRIPTION of Language Default
+;
+;  DefaultLanguage - identifies the language in which PROMSGS appears by default.
+;    -Valid values are:
+;      Czech
+;      Dutch
+;      English - American
+;      English - International
+;      French
+;      German
+;      Italian
+;      Polish
+;      Portuguese
+;      Portuguese - Brazilian
+;      Spanish
+;      Spanish - Latin
+;      Swedish
+;
+
+[Language Default]
+DefaultLanguage=English - American
+
+[Language Choice]
+lang1=English - American
+
+;
+; DESCRIPTION of International Settings
+;
+;   NOTE: For specific information please refer to the intlsets.txt file located at the root level of the cdrom from which this information is derived.
+;   cpinternal - identifies the -cpinternal and -cpstream values included in the startup.pf file.
+;   cpcollation - identifies the -cpcoll value included in the startup.pf file.
+;   cpcase - identifies the -cpcase value included in the startup.pf file.
+;   dateformat - identifies the -d value included in the startup.pf file.
+;   numsep - identifies the -numsep value included in the startup.pf file.
+;   numdec - identifies the -numdec value included in the startup.pf file.
+;
+
+[International Settings]
+cpinternal=ISO8859-1
+cpcollation=Basic
+cpcase=Basic
+dateformat=mdy
+numsep=44
+numdec=46
 ;
 ; DESCRIPTION of PacificAppServerPortDetails
 ;
@@ -45,13 +120,31 @@ oem_workpath=${OEMWRKDIR}
 ;
 
 [PacificAppServerPortDetails]
-nPortHttp=${PAS_PORT_HTTP}
-nPortHttps=${PAS_PORT_HTTPS}
-nPortShutdown=${PAS_PORT_SHUT}
+nPortHttp=8080
+nPortHttps=8443
+nPortShutdown=-1
 
 [Installed Products]
-ProductCount=1
-Product 63=Progress ProdAS for OE (5 USERS)
+ProductCount=2
+Product 105=OE Enterprise RDBMS (50 USERS)
+
+Product 63=Progress ProdAS for OE (50 USERS)
+[Product 105]
+__SubComponent_Compile Tool - CHAR=1
+__SubComponent_Oracle Client=1
+__SubComponent_ADM Runtime - CHAR=1
+__SubComponent_Client-Side Security (r)=1
+_Component_OpenEdge SQL ODBC Clients=1
+_Component_OpenEdge SQL JDBC Clients=1
+_Component_OpenEdge ESQL/C Clients=1
+_Component_Open Client Adapter Options Basic (r)=1
+__SubComponent_AppServer Internet Adapter (r)=1
+__SubComponent_OpenEdge Adapter for SonicMQ (r)=1
+__SubComponent_Java Client Support (r)=1
+_Component_OEBuild Utility (r)=1
+_Component_Client-Side Web Services Deploy (r)=1
+__SubComponent_Web Services Basic (r)=1
+__SubComponent_Web Services Schema (r)=1
 
 [Product 63]
 __SubComponent_Client-Side Security (r)=1
